--- a/migration/script/config.php.dist
+++ b/migration/script/config.php.dist
@@ -7,14 +7,15 @@ define('BASE_PATH', '/data/91jili/merge');
 
 //define('BASE_PATH', dirname(__FILE__));
 
-define('IMPORT_PATH',  BASE_PATH. '/import');
-define('EXPORT_PATH', BASE_PATH . '/export');
+//define('IMPORT_PATH',  BASE_PATH. '/import');
+//define('EXPORT_PATH', BASE_PATH . '/export');
 
 define('IMPORT_JL_PATH', BASE_PATH.'/jl_csv');
 define('IMPORT_WW_PATH', BASE_PATH.'/ww_csv');
 define('EXPORT_PATH', BASE_PATH . '/export');
 
-define('LOG_PATH', BASE_PATH . '/log.txt');
+define('LOG_PATH', BASE_PATH . '/log/');
+
 define('VOTE_ANSWER', 'panel_91wenwen_vote_answer_201511');
 
 ?>
