--- a/app/config/custom_parameters.yml.dist
+++ b/app/config/custom_parameters.yml.dist
@@ -224,6 +224,7 @@ parameters:
     forget_wr_pwd: 用户密码为6-20个字符，不能含特殊符号
     forget_unsame_pwd: 2次输入的用户密码不相同
     forget_su_pwd: 密码修改成功
+    update_password_fail:  密码修改失败，请稍后再试。
     change_wr_oldpwd: 旧密码不正确
     change_en_oldpwd: 请输入旧的用户密码
     change_en_newpwd: 请输入新的用户密码
