--- a/app/config/custom_parameters.yml.dist
+++ b/app/config/custom_parameters.yml.dist
@@ -381,6 +381,84 @@ parameters:
     jili_app.logs_dir: /data/91jili/logs
     admin_vote_log_path: %jili_app.logs_dir%/admin/admin_vote.log
     vote_suggest_mail_to: %wenwen_support_email_address%
+
+#生日错误
+    birthday_error: "您选择的生日不正确"
+
+#职业
+    job_code:
+        '1':  "公务员"
+        '2':  "经营管理者"
+        '3':  "公司职员（一般事务）"
+        '4':  "公司职员（技术人员）"
+        '5':  "公司职员（律师，医生等专业人士）"
+        '6':  "公司职员（其他）"
+        '7':  "军人"
+        '8':  "个体户"
+        '9':  "家庭主妇"
+        '10': "打工者"
+        '11': "学生"
+        '12': "待业"
+        '99': "其他"
+#产业
+    industry_code:
+        '1':  "农业/水产"
+        '2':  "金融（银行/证券/保险）"
+        '3':  "计算机/IT/数据输入"
+        '4':  "电子技术/半导体/集成电路"
+        '5':  "会计/审计"
+        '6':  "贸易/进出口"
+        '7':  "房地产"
+        '8':  "印刷/出版"
+        '9':  "咨询"
+        '10': "人力资源"
+        '11': "美容"
+        '12': "娱乐/休闲/体育"
+        '13': "建筑业"
+        '14': "教育"
+        '15': "工业"
+        '16': "政府机关"
+        '17': "医疗/保健"
+        '18': "法律"
+        '19': "制造业"
+        '20': "销售/市场"
+        '21': "媒体/广告/互联网"
+        '22': "制药"
+        '23': "批发/零售"
+        '24': "供电/供水/煤气/供热"
+        '25': "保安"
+        '26': "电话/通信"
+        '27': "运输/物流"
+        '28': "采掘/矿产"
+        '29': "酒店/旅游代理"
+        '30': "餐饮服务"
+        '99': "其他"
+#部门
+    work_section_code:
+        '1':  "总务/人事/管理"
+        '2':  "会计/财务"
+        '3':  "销售"
+        '4':  "公关/宣传"
+        '5':  "调研/市场"
+        '6':  "规划"
+        '7':  "设计"
+        '8':  "信息系统管理"
+        '9':  "IT开发"
+        '10': "技术开发"
+        '11': "生产/制造"
+        '12': "劳务保障"
+        '13': "客户服务"
+        '14': "经营"
+        '15': "法律"
+        '16': "医疗"
+        '99': "其他"
+#教育程度
+    graduation_code:
+        '1': "高中以下"
+        '2': "高中毕业"
+        '3': "大专毕业"
+        '4': "大学本科毕业"
+        '5': "研究生，博士毕业"
 twig:
     globals:
         cps_default_rebate:  %cps_default_rebate%
