refactor the reg active mailling & tests

--- a/src/Jili/FrontendBundle/Resources/config/mailers.yml
+++ b/src/Jili/FrontendBundle/Resources/config/mailers.yml
@@ -6,3 +6,8 @@ services:
     jili_frontend.mailer:
         class: %jili_frontend.mailer.class%
         arguments: [ @mailer, @router ] 
+        calls:
+            - [ setTemlating, [ @templating ] ] 
+            - [ setTranslator, [ @translator ] ] 
+
+
