fixed checking user password script

--- a/migration/script/config.php.dist
+++ b/migration/script/config.php.dist
@@ -12,6 +12,7 @@ define('BASE_PATH', '/data/91jili/merge');
 
 define('IMPORT_JL_PATH', BASE_PATH.'/jl_csv');
 define('IMPORT_WW_PATH', BASE_PATH.'/ww_csv');
+define('CHECK_PATH', BASE_PATH.'/chk_csv');
 define('EXPORT_PATH', BASE_PATH . '/export');
 
 define('LOG_PATH', BASE_PATH . '/log/');
