--- a/migration/script/db_to_csv/config.bashrc.dist
+++ b/migration/script/db_to_csv/config.bashrc.dist
@@ -8,3 +8,8 @@ WW_DB_PWD=
 WW_DB_HOST=
 WW_DB_NAME=
 
+LOC_DB_USER=${JILI_DB_USER}
+LOC_DB_PWD=${JILI_DB_PWD}
+LOC_DB_HOST=${JILI_DB_HOST}
+LOC_DB_NAME={JILI_DB_NAME}
+
