--- a/migration/script/user_images/makefile.txt
+++ b/migration/script/user_images/makefile.txt
@@ -1,17 +1,31 @@
+
 image_log=/data/91jili/merge/log/image.log
 image_log_bk=/data/91jili/merge/log/image_`date +%Y%m%d-%H`.log
+
+image_chk_log=/data/91jili/merge/log/image_check.log
+image_chk_log_bk=/data/91jili/merge/log/image_check_`date +%Y%m%d-%H`.log
+
 time_fmt=real\t%E\nuser\t%U\nsys\t%S\n
 
 fetch:
 	/usr/bin/time -ao ${image_log}  -f "${time_fmt}" bash wget_user_images.sh 1>>${image_log} 2>&1 
 	/usr/bin/time -ao ${image_log}  -f "${time_fmt}" bash mv_user_images.sh 1>>${image_log} 2>&1 
 
-all: init   fetch
-	echo 'all completed ' >> ${image_log} 
-#	sed "/^$$/d;/^user/d;/^sys/d"  ${image_log}
-	grep -h real  ${image_log}   | cut -b 5-100 | awk -F '[m|:|s]' 'BEGIN{m=0;s=0;} { m=m+$$1;s=s+$$2; } END{ print  (m + int(s/60)) "m" (s % 60) "s"}' 
-	cp ${image_log}  ${merge_log_bk}
-	rm -rf ${image_log}
+fetch_v3:
+	bash wget_user_images_v3.sh 1>${image_log} 2>&1
+	cp ${image_log} ${image_log_bk}
 
-.SILENT:
+check_failed:
+	grep '^LACK:' /tmp/log5 | cut -c36- > /tmp/lack_images.txt
+	php -f check_download_failed_images.php > check_download_failed_images.sql
+	scp check_download_failed_images.sh check_download_failed_images.sql t-jiang@54.254.98.246:/mnt/tmp/merge/bin/ 
+	ssh t-jiang@54.254.98.246  'cd /mnt/tmp/merge/; bash bin/check_download_failed_images.sh 2>&1 '|sed -n '/s_file/!p' | tee /tmp/lack.user_images.csv
+	php -f get_failed_users_page.php /tmp/lack.user_images.csv > ${image_chk_log}
+	grep "^IMAGES_URL_PATH:"     ${image_chk_log} | cut -c 17- > /tmp/image_checked_urls.txt
+	bash image_checked_urls.sh 1>${image_log} 2>&1
+	grep "^SQL:" ${image_chk_log} | cut -c 5- > /tmp/image_checked.sql
+	bash wget_user_images_v3.sh /tmp/image_checked.sql 1>>${image_chk_log} 2>&1
 
+#update_images_changed( necessary )
+#	scp -P9012 /tmp/image_checked.sql jiangtao@jili-web:/
+#	bash wget_user_images_v3.sh 1>${image_log} 2>&1
