--- a/src/Jili/FrontendBundle/Resources/config/forms.yml
+++ b/src/Jili/FrontendBundle/Resources/config/forms.yml
@@ -4,9 +4,8 @@ parameters:
 services:
     signup.form_handler:
         class: %signup.form_handler.class%
+        arguments: [ %signup.crypt_method%, %signup.salt% ]  
         calls:
             - [ setLogger, [ @logger ] ] 
             - [ setEntityManager, [ @doctrine.orm.entity_manager ] ] 
             - [ setSession, [ @session ] ] 
-            - [ setContainer, [ @service_container ] ] 
-            - [ setMailer, [ "@jili_frontend.mailer" ] ]
