fixed add register successfull points & campagin code tracking logging

--- a/src/Jili/FrontendBundle/Resources/config/services.yml
+++ b/src/Jili/FrontendBundle/Resources/config/services.yml
@@ -8,3 +8,8 @@ services:
             - [ setSession, ["@session"] ] 
         tags:
             - { name: kernel.event_listener, event: kernel.controller, method: onKernelController }
+
+    campaign_code.tracking:
+        class: Jili\FrontendBundle\Services\CampaignLogger 
+        arguments: [ "/data/91jili/logs/sf2" ]
+
