--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
      	"knplabs/knp-paginator-bundle": "dev-master",
         "gregwar/captcha-bundle": "dev-master",
         "friendsofsymfony/jsrouting-bundle": "@stable",
-        "oro/doctrine-extensions": "^1.0"
+        "oro/doctrine-extensions": "^1.0",
+        "nategood/httpful": "^0.2.20"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "2.1.0",
