--- a/src/Jili/ApiBundle/Resources/config/services.yml
+++ b/src/Jili/ApiBundle/Resources/config/services.yml
@@ -9,6 +9,7 @@ parameters:
 
     general_api.task_history.class: Jili\ApiBundle\EventListener\TaskHistory
     general_api.point_history.class: Jili\ApiBundle\EventListener\PointHistory
+    points_manager.class: Jili\ApiBundle\Services\Points\Manager
 
     offerwow_api_return.logger.class: Jili\ApiBundle\EventListener\OfferwowApiLogger
     offerwow_request.validation.class: Jili\ApiBundle\EventListener\OfferwowRequestValidation
@@ -121,6 +122,14 @@ services:
     general_api.task_history:
         class: %general_api.task_history.class%
         arguments: [ "@logger","@doctrine.orm.entity_manager" ]
+
+    points_manager:
+        class: %points_manager.class%
+        calls:
+            - [setLogger, ["@logger"]]
+            - [setEntityManager, ["@doctrine.orm.entity_manager"] ]
+            - [setPointHistory, ["@general_api.point_history"] ]
+            - [setTaskHistory, ["@general_api.task_history"] ]
 
     general_api.point_history:
         class: %general_api.point_history.class%
