--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "symfony/framework-standard-edition",
     "description": "The \"Symfony Standard Edition\" distribution",
     "autoload": {
-        "psr-0": { "": "src/" }
+        "psr-0": { "": ["src/", "lib/"] }
     },
     "require": {
         "php": ">=5.3.3",
@@ -24,7 +24,8 @@
         "friendsofsymfony/jsrouting-bundle": "@stable",
         "oro/doctrine-extensions": "^1.0",
         "nategood/httpful": "^0.2.20",
-        "jms/job-queue-bundle": "^1.2"
+        "jms/job-queue-bundle": "^1.2",
+        "pear/net_url2": "^2.2"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "2.1.0",
