update sass command in makefile

--- a/makefile.txt
+++ b/makefile.txt
@@ -48,3 +48,10 @@ cc-all:
 	sudo rm -rf app/logs/*
 	sudo rm -rf app/logs_data/*
 	sudo rm -rf app/sessions/*
+
+
+sass:
+	sass -v
+	sass --trace  -C --sourcemap=none  --style=nested --watch web/sass:web/css 
+
+
