generate wenwen bundles

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,18 @@
+wenwen_app:
+    resource: "@WenwenAppBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
+wenwen_backendd:
+    resource: "@WenwenBackenddBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
+wenwen_frontend:
+    resource: "@WenwenFrontendBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 api:
     resource: "@JiliApiBundle/Controller"
     type: annotation
