added value referer on webpower parameters.yml

--- a/app/config/custom_parameters.yml.dist
+++ b/app/config/custom_parameters.yml.dist
@@ -319,13 +319,17 @@ parameters:
     webpower_email_password: 'nUshkwu#9'
     webpower_soap_uri: 'http://91jili.dmdelivery.com/x/soap-v4/wsdl.php'
 
-    webpower.91wenwen_signup.username: 
-    webpower.91wenwen_signup.password:
-    webpower.91wenwen_signup.soap_uri: 
+# this account is copied from wenwen configs:
+# /web/httpd_rpa/cap-deployment/rpa/current/local-git/pl/etc/config.yaml
+#  L10 ~ L28
+  
+    webpower.91wenwen_signup.username: '' #  webuser_signup.login.username
+    webpower.91wenwen_signup.password: '' #  webuser_signup.login.password
+    webpower.91wenwen_signup.soap_uri: '' #  webuser_signup.login.proxy
 
-    webpower.91wenwen.username:  
-    webpower.91wenwen.password: 
-    webpower.91wenwen.soap_uri: 
+    webpower.91wenwen.username: '' # webpower.login.username
+    webpower.91wenwen.password: '' # webpower.login.password
+    webpower.91wenwen.soap_uri: '' # webpower.soap.proxy
 
     # the uri relative to web/
     taobao_self_promotion_picture_uri_path: images/taobao_products_picture/
