--- a/src/Jili/ApiBundle/Resources/config/services.yml
+++ b/src/Jili/ApiBundle/Resources/config/services.yml
@@ -2,6 +2,9 @@ parameters:
 # user related
     login.listener.class: Jili\ApiBundle\Services\UserLogin
     soap.mail.listener.class: Jili\ApiBundle\EventListener\SoapMailListener
+    webpower.91wenwen_signup.mailer.class: Jili\ApiBundle\Services\Dmdelivery\Client
+    webpower.91wenwen.mailer.class: Jili\ApiBundle\Services\Dmdelivery\Client
+
     user_sign_up_route.class: Jili\ApiBundle\Services\UserSignUpTracer
     user_source.logger.class: Jili\ApiBundle\Services\Logger\UserSourceLogger
     monolog.logger.import_adw_cps.class: Jili\ApiBundle\Services\Logger\ImportAdwCpsLogger
@@ -348,3 +351,18 @@ services:
         class: %alerttoslack.class%
         calls:
             - [ setContainer, [ @service_container ] ]
+
+    webpower.91wenwen.mailer:
+        class: %webpower.91wenwen.mailer.class%
+        arguments: [ %webpower.91wenwen.soap_uri% , %webpower.91wenwen.username%, %webpower.91wenwen.password% ]
+        calls:
+             - [ setLogger, ["@logger"] ]
+             - [ setResultsEmail, [ %cron_alertTo_contacts% ] ]
+
+    webpower.91wenwen_signup.mailer:
+        class: %webpower.91wenwen_signup.mailer.class%
+        arguments: [ %webpower.91wenwen_signup.soap_uri% , %webpower.91wenwen_signup.username%,%webpower.91wenwen_signup.password% ]
+        calls:
+             - [ setLogger, ["@logger"] ]
+             - [ setResultsEmail, [ %cron_alertTo_contacts% ] ]
+
