remove account/password

--- a/scripts/perl/Lib/SMTP.yaml
+++ b/scripts/perl/Lib/SMTP.yaml
@@ -1,4 +1,4 @@
 smtp:
     server:    smtp.exmail.qq.com
-    username:    account@91jili.com
-    password:    91jili
+    username:    ******
+    password:    ******
