--- a/migration/script/user_images/makefile.txt
+++ b/migration/script/user_images/makefile.txt
@@ -7,6 +7,8 @@ image_chk_log_bk=/data/91jili/merge/log/image_check_`date +%Y%m%d-%H`.log
 
 time_fmt=real\t%E\nuser\t%U\nsys\t%S\n
 
+ssh_wenwen_user=t-jiang
+
 fetch:
 	/usr/bin/time -ao ${image_log}  -f "${time_fmt}" bash wget_user_images.sh 1>>${image_log} 2>&1 
 	/usr/bin/time -ao ${image_log}  -f "${time_fmt}" bash mv_user_images.sh 1>>${image_log} 2>&1 
@@ -19,8 +21,8 @@ fetch_v3:
 check_failed:
 	grep '^LACK:' ${image_log} | cut -c36- > /tmp/lack_images.txt
 	php -f check_download_failed_images.php > check_download_failed_images.sql
-	scp check_download_failed_images.sh check_download_failed_images.sql t-jiang@54.254.98.246:/mnt/tmp/merge/bin/ 
-	ssh t-jiang@54.254.98.246  'cd /mnt/tmp/merge/; bash bin/check_download_failed_images.sh 2>&1 '|sed -n '/s_file/!p' | tee /tmp/lack.user_images.csv
+	scp check_download_failed_images.sh check_download_failed_images.sql ${ssh_wenwen_user}@54.254.98.246:/mnt/tmp/merge/bin/ 
+	ssh ${ssh_wenwen_user}@54.254.98.246  'cd /mnt/tmp/merge/; bash bin/check_download_failed_images.sh 2>&1 '|sed -n '/s_file/!p' | tee /tmp/lack.user_images.csv
 	php -f get_failed_users_page.php /tmp/lack.user_images.csv > ${image_chk_log}
 	grep "^IMAGES_URL_PATH:"     ${image_chk_log} | cut -c 17- > /tmp/image_checked_urls.txt
 	bash image_checked_urls.sh 1>${image_log} 2>&1
