--- a/migration/script/db_to_csv/makefile.txt
+++ b/migration/script/db_to_csv/makefile.txt
@@ -28,7 +28,7 @@ dump-jili: init
 	/usr/bin/time -ao ${jili_log}  -f "${time_fmt}" php -f jl_csv.php > /data/91jili/merge/bin/jl_csv.sh
 	echo 'deploy dump-db script' >> ${jili_log} 
 	/usr/bin/time -ao ${jili_log}  -f "${time_fmt}" scp -P9012 ./db_to_csv.php  /data/91jili/merge/bin/jl_csv.sh config.bashrc.dist ${ssh_jili_user}@jili-web:/data/91jili/merge/bin/
-#	while true;do read -p "Have you update the db config on remote server?[y/n]" yn;case $$yn in   [Yy]* ) echo "Go next";break;;* ) echo "Please do it.";;esac;done
+#	while true;do read -p "Have you update the db config(/data/91jili/merge/bin/config.bashrc)  on jili-web ?[y/n]" yn;case $$yn in   [Yy]* ) echo "Go next";break;;* ) echo "Please do it.";;esac;done
 	echo 'run dump-db script' >> ${jili_log} 
 	ssh -p 9012 ${ssh_jili_user}@jili-web 'cd /data/91jili/merge; bash bin/jl_csv.sh 2>&1 ' >> ${jili_log}
 
@@ -39,7 +39,7 @@ dump-ww: init
 	/usr/bin/time -ao ${ww_log}  -f "${time_fmt}"  php -f ww_csv.php > ${merge_dir}/ww_csv.sh
 	echo 'deploy dump-db script' > ${ww_log} 
 	/usr/bin/time -ao ${ww_log}  -f "${time_fmt}" scp -q db_to_csv.php ${merge_dir}/ww_csv.sh  config.bashrc.dist  ${ssh_wenwen_user}@54.254.98.246:/mnt/tmp/merge/bin/
-#	while true;do read -p "Have you update the db config on remote server?[y/n]" yn;case $$yn in   [Yy]* ) echo "Go next";break;;* ) echo "Please do it.";;esac;done
+#	while true;do read -p "Have you update the db config (/mnt/tmp/merge/bin/config.bashrc) on rap-staff01 server?[y/n]" yn;case $$yn in   [Yy]* ) echo "Go next";break;;* ) echo "Please do it.";;esac;done
 	echo 'run dump-db script' >> ${ww_log} 
 	ssh ${ssh_wenwen_user}@54.254.98.246 'cd /mnt/tmp/merge/; bash bin/ww_csv.sh 2>&1 ' >> ${ww_log}
 
@@ -64,7 +64,7 @@ fetch-check:
 	echo 'fetch for check ' > ${check_log}
 	echo 'deploy dump-db for check script' >> ${check_log} 
 	/usr/bin/time -ao ${check_log}  -f "${time_fmt}" cp  db_to_csv.php user_password_csv.sh  config.bashrc.dist  /data/91jili/merge/bin/ 
-#	while true;do read -p "Have you update the db config on remote server?[y/n]" yn;case $$yn in   [Yy]* ) echo "Go next";break;;* ) echo "Please do it.";;esac;done
+#	while true;do read -p "Have you update the db config (/data/91jili/merge/bin/config.bashrc ) on remote server?[y/n]" yn;case $$yn in   [Yy]* ) echo "Go next";break;;* ) echo "Please do it.";;esac;done
 	echo 'run dump-db for check script' >> ${check_log} 
 	cd /data/91jili/merge/;/usr/bin/time -ao ${check_log}  -f "${time_fmt}"  bash bin/user_password_csv.sh 2>&1  >> ${check_log}
 	cp ${check_log}  ${check_log_bk}
