--- a/app/config/custom_parameters.yml.dist
+++ b/app/config/custom_parameters.yml.dist
@@ -485,4 +485,4 @@ parameters:
 twig:
     globals:
         cps_default_rebate:  %cps_default_rebate%
-
+        app_sop_hosts: %sop_console_host% 
