--- a/src/Jili/BackendBundle/Resources/config/services.yml
+++ b/src/Jili/BackendBundle/Resources/config/services.yml
@@ -9,7 +9,7 @@ services:
         class: %authentication_ip.action_listener.class%
         calls:
             - [setContainer, ["@service_container"] ] 
-        arguments: [ [%admin_home_ip%,  %admin_vpn_ip%,    %admin_ele_ip%,    %admin_un_ip% , 127.0.0.1] ]
+        arguments: [ [%admin_home_ip%,  %admin_vpn_ip%,  %admin_un_ip% , 127.0.0.1] ]
         tags:
             - { name: kernel.event_listener, event: kernel.controller, method: onKernelController }
     game_seeker.points_pool:
