--- a/circle.yml
+++ b/circle.yml
@@ -11,9 +11,8 @@ database:
     - mysql_tzinfo_to_sql /usr/share/zoneinfo | mysql -uubuntu mysql
 
 dependencies:
-  pre:
-    - make circle
-  post:
+  override:
+    make circle
 
 
 test:
