--- a/circle.yml
+++ b/circle.yml
@@ -17,5 +17,5 @@ dependencies:
 
 test:
   override:
-    - echo "skip test"
+    - ./bin/phpunit -c ./app/phpunit.circle.xml -d memory_limit=-1 -v --debug ./src/Wenwen/
 
