--- a/app/config/custom_parameters.yml.dist
+++ b/app/config/custom_parameters.yml.dist
@@ -511,6 +511,7 @@ parameters:
         api_v1_1_fulcrum_surveys_research_participation_history: https://%sop_console_host%/api/v1_1/fulcrum/surveys/research/participation_history
         api_v1_1_fulcrum_user_agreement_participation_history: https://%sop_console_host%/api/v1_1/fulcrum/surveys/user_agreement/participation_history
         api_v1_1_cint_surveys_research_participation_history: https://%sop_console_host%/api/v1_1/cint/surveys/research/participation_history
+        api_v1_1_surveys_research_additional_incentive: https://%sop_console_host%/api/v1_1/surveys/research/additional_incentive
         sop_point_type:
             11: 92  # 91wenwen.point.exec_types: 11, アンケート回答, questionnaire(cost)
             61: 93  # 91wenwen.point.exec_types: 61, アンケート回答（自社）, questionnaire(expense)
