--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -14,9 +14,13 @@
     bootstrap                   = "bootstrap.php.cache" >
 
     <testsuites>
-        <testsuite name="Project Test Suite">
+        <testsuite name="all">
             <directory>../src/*/*Bundle/Tests</directory>
             <directory>../src/*/Bundle/*Bundle/Tests</directory>
+        </testsuite>
+
+        <testsuite name="wenwen">
+            <directory>../src/Wenwen/*Bundle/Tests</directory>
         </testsuite>
     </testsuites>
 
