--- a/circle.yml
+++ b/circle.yml
@@ -20,9 +20,9 @@ dependencies:
 
 test:
   pre:
-      php app/console doctrine:database:drop --force --env "test"
-      php app/console doctrine:database:create --env "test"
-      php app/console doctrine:schema:update --force --env "test"
+    - php app/console doctrine:database:drop --force --env "test"
+    - php app/console doctrine:database:create --env "test"
+    - php app/console doctrine:schema:update --force --env "test"
   override:
     - ./bin/phpunit -c ./app/phpunit.xml.dist -d memory_limit=-1 -v --debug --testsuite wenwen
 
