--- a/app/config/custom_parameters.yml.dist
+++ b/app/config/custom_parameters.yml.dist
@@ -201,7 +201,7 @@ parameters:
     reg_noal_mail: 邮箱地址未激活，请重新
     reg_al_mail: 邮箱地址已经注册
     reg_en_nick: 请输入用户昵称
-    reg_al_nick: 用户昵称已经注册
+    reg_al_nick: 用户昵称已经存在
     reg_wr_nick: 用户昵称为2-20个字符
     reg_wr_captcha: 请输入正确的验证码
     login_wr: 邮箱地址或密码输入错误
@@ -221,13 +221,14 @@ parameters:
     exchange_unsame_mobile: 2次输入的手机号码不相同
     exchange_unsame_alipay: 2次输入的支付宝账号不相同
     forget_en_pwd: 请输入用户密码
-    forget_wr_pwd: 用户密码为6-20个字符，不能含特殊符号
+    forget_wr_pwd: 用户密码为5-100个字符，密码至少包含1位字母和1位数字
     forget_unsame_pwd: 2次输入的用户密码不相同
     forget_su_pwd: 密码修改成功
+    update_password_fail: 密码修改失败，请稍后再试。
     change_wr_oldpwd: 旧密码不正确
     change_en_oldpwd: 请输入旧的用户密码
     change_en_newpwd: 请输入新的用户密码
-    change_wr_pwd: 用户密码为6-20个字符，不能含特殊符号
+    change_wr_pwd: 用户密码为5-100个字符，密码至少包含1位字母和1位数字
     change_unsame_pwd: 2次输入的用户密码不相同
     chnage_no_email: 邮箱地址未注册
     exchange_ing_amazon_tilte: “亚马逊礼品卡”兑换申请
@@ -393,14 +394,133 @@ parameters:
     admin_vote_log_path: %jili_app.logs_dir%/admin/admin_vote.log
     vote_suggest_mail_to: %wenwen_support_email_address%
 
+    recruit_offer99:
+        callback:
+          url:
+          ad_key:
+          return_strings:
+            error_tid: 交易号错误
+            error_1: 交易号重复处理过
+            error_2: Ip完成过
+            error_3: 一天内ip段完成过
+            error_safe_filename: 回调文件与交易号不匹配
+            error_callback_ip: 广告方IP加调不正确
+            error_sign: 签名不正确
+            success: 成功
+
+    recruit_offerwow:
+        api:
+          recruit:
+          pid:
+          tier:
+
+    signup.crypt_method:
+    signup.salt:
+
+#生日错误
+    birthday_error: "您选择的生日不正确"
+
+#职业
+    job_code:
+        '1':  "公务员"
+        '2':  "经营管理者"
+        '3':  "公司职员（一般事务）"
+        '4':  "公司职员（技术人员）"
+        '5':  "公司职员（律师，医生等专业人士）"
+        '6':  "公司职员（其他）"
+        '7':  "军人"
+        '8':  "个体户"
+        '9':  "家庭主妇"
+        '10': "打工者"
+        '11': "学生"
+        '12': "待业"
+        '99': "其他"
+#产业
+    industry_code:
+        '1':  "农业/水产"
+        '2':  "金融（银行/证券/保险）"
+        '3':  "计算机/IT/数据输入"
+        '4':  "电子技术/半导体/集成电路"
+        '5':  "会计/审计"
+        '6':  "贸易/进出口"
+        '7':  "房地产"
+        '8':  "印刷/出版"
+        '9':  "咨询"
+        '10': "人力资源"
+        '11': "美容"
+        '12': "娱乐/休闲/体育"
+        '13': "建筑业"
+        '14': "教育"
+        '15': "工业"
+        '16': "政府机关"
+        '17': "医疗/保健"
+        '18': "法律"
+        '19': "制造业"
+        '20': "销售/市场"
+        '21': "媒体/广告/互联网"
+        '22': "制药"
+        '23': "批发/零售"
+        '24': "供电/供水/煤气/供热"
+        '25': "保安"
+        '26': "电话/通信"
+        '27': "运输/物流"
+        '28': "采掘/矿产"
+        '29': "酒店/旅游代理"
+        '30': "餐饮服务"
+        '99': "其他"
+#部门
+    work_section_code:
+        '1':  "总务/人事/管理"
+        '2':  "会计/财务"
+        '3':  "销售"
+        '4':  "公关/宣传"
+        '5':  "调研/市场"
+        '6':  "规划"
+        '7':  "设计"
+        '8':  "信息系统管理"
+        '9':  "IT开发"
+        '10': "技术开发"
+        '11': "生产/制造"
+        '12': "劳务保障"
+        '13': "客户服务"
+        '14': "经营"
+        '15': "法律"
+        '16': "医疗"
+        '99': "其他"
+#教育程度
+    graduation_code:
+        '1': "高中以下"
+        '2': "高中毕业"
+        '3': "大专毕业"
+        '4': "大学本科毕业"
+        '5': "研究生，博士毕业"
+
+#SOP
+    sop_console_host: console.partners.surveyon.com.dev.researchpanelasia.com
     sop:
         partner_id: 1
         admin_host:   staff.surveyon.com.dev.researchpanelasia.com
-        console_host: console.partners.surveyon.com.dev.researchpanelasia.com
+        console_host: %sop_console_host%
+        host: partners.surveyon.com.dev.researchpanelasia.com
         auth:
-            app_id: 24
-            app_secret: 1413548805-7b6639b3944e1fc12dfb8676deee8759c3fa6250
+            app_id: 27
+            app_secret: 1436424899-bd6982201fb7ea024d0926aa1b40d541badf9b4a
+        point:
+            profile: 1
+        api_v1_1_surveys_research_participation_history: https://%sop_console_host%/api/v1_1/surveys/research/participation_history
+        api_v1_1_fulcrum_surveys_research_participation_history: https://%sop_console_host%/api/v1_1/fulcrum/surveys/research/participation_history
+        api_v1_1_fulcrum_user_agreement_participation_history: https://%sop_console_host%/api/v1_1/fulcrum/surveys/user_agreement/participation_history
+        api_v1_1_cint_surveys_research_participation_history: https://%sop_console_host%/api/v1_1/cint/surveys/research/participation_history
+        sop_point_type:
+            11: 92  # 91wenwen.point.exec_types: 11, アンケート回答, questionnaire(cost)
+            61: 93  # 91wenwen.point.exec_types: 61, アンケート回答（自社）, questionnaire(expense)
+    cint:
+        user_agreement:
+          inactive: 0
+          active: 1
+          agreed: 10
 
 twig:
     globals:
         cps_default_rebate:  %cps_default_rebate%
+        app_sop_hosts: %sop_console_host%
