--- a/src/Wenwen/AppBundle/Resources/config/services.yml
+++ b/src/Wenwen/AppBundle/Resources/config/services.yml
@@ -1,3 +1,8 @@
 services:
     sop_api.client:
         class: Wenwen\AppBundle\Services\SopHttpfulClient
+    withdraw_handler:
+        class: WenWen\AppBundle\Services\WithdrawHandler
+        calls:
+            - [ setLogger, [ @logger ] ]
+            - [ setEntityManager, [ @doctrine.orm.entity_manager ] ]
