--- a/app/config/custom_parameters.yml.dist
+++ b/app/config/custom_parameters.yml.dist
@@ -495,6 +495,10 @@ parameters:
         '4': "大学本科毕业"
         '5': "研究生，博士毕业"
 
+    ssi_project_survey:
+      title: "SSI海外调查"
+      point: 180
+
 #SOP
     sop_console_host: console.partners.surveyon.com.dev.researchpanelasia.com
     sop:
