--- a/app/config/custom_parameters.yml.dist
+++ b/app/config/custom_parameters.yml.dist
@@ -390,7 +390,7 @@ parameters:
             SUCCESS_DUPLICATED: 0 #0 表示推送成功 但订单已存在。
             FAILED: -1            #-1 表示推送失败
 
-    jili_app.logs_dir: /data/91jili/logs
+    jili_app.logs_dir: %kernel.logs_dir%/data/91jili/logs
     admin_vote_log_path: %jili_app.logs_dir%/admin/admin_vote.log
     vote_suggest_mail_to: %wenwen_support_email_address%
 
