--- a/circle.yml
+++ b/circle.yml
@@ -7,10 +7,7 @@ machine:
 dependencies:
   override:
     - make circle
-    - php app/console doctrine:database:drop --force --env "test"
-    - php app/console doctrine:database:create --env "test"
-    - php app/console doctrine:schema:update --force --env "test"
 
 test:
   override:
-    - ./bin/phpunit -c ./app/phpunit.xml.dist -d memory_limit=-1 -v --debug --testsuite wenwen
+    - make test
