--- a/app/config/config_test.yml.dist
+++ b/app/config/config_test.yml.dist
@@ -13,7 +13,10 @@ web_profiler:
     intercept_redirects: false
 
 swiftmailer:
-    disable_delivery: true
+    disable_delivery: false
+    spool:
+        type: file
+        path: '%kernel.root_dir%/cache/%kernel.environment%/spool'
 
 doctrine:
     dbal:
