--- a/app/config/custom_parameters.yml.dist
+++ b/app/config/custom_parameters.yml.dist
@@ -354,7 +354,7 @@ parameters:
     flow_client_ip: #ip地址
         1: 59.83.33.8
         2: 59.83.33.60
-    flow_file_path_flow_api_log: /data/91jili/logs/api/flow_api.log
+    flow_file_path_flow_api_log: %kernel.logs_dir%/data/91jili/logs/api/flow_api.log
     flow_mail_subject: "积粒网-flow流量包接口数据处理失败"
     flow_alertTo_contacts: %cron_alertTo_contacts%
     flow_exchange_error: "对不起，不能兑换，请联系客服！"
