--- a/circle.yml
+++ b/circle.yml
@@ -14,3 +14,8 @@ dependencies:
 test:
   override:
     - ./bin/phpunit -c ./app/phpunit.xml.dist -d memory_limit=-1 -v --debug --testsuite wenwen
+    - ./bin/phpunit -c ./app/phpunit.xml.dist -d memory_limit=-1 -v --debug --testsuite jili_api_command
+    - ./bin/phpunit -c ./app/phpunit.xml.dist -d memory_limit=-1 -v --debug --testsuite jili_api_controller
+    - ./bin/phpunit -c ./app/phpunit.xml.dist -d memory_limit=-1 -v --debug --testsuite jili_api_entity
+    - ./bin/phpunit -c ./app/phpunit.xml.dist -d memory_limit=-1 -v --debug --testsuite jili_api_form
+    - ./bin/phpunit -c ./app/phpunit.xml.dist -d memory_limit=-1 -v --debug --testsuite jili_api_repo
