--- a/circle.yml
+++ b/circle.yml
@@ -10,6 +10,7 @@ dependencies:
     - php app/console doctrine:database:drop --force --env "test"
     - php app/console doctrine:database:create --env "test"
     - php app/console doctrine:schema:update --force --env "test"
+    - php app/console cache:clear --env "test"
 
 test:
   override:
