--- a/scripts/perl/Makefile
+++ b/scripts/perl/Makefile
@@ -1,5 +1,13 @@
-setup:
-	echo "development-${USER}" >env.pl
+setup: create-config carton-install
+
+carton-install:
 	carton install --deployment
+
+create-config:
+	if [ ! -e env.pl ] ; then \
+		touch env.pl ; \
+		echo '$$ENV{WENWEN_ENV} = "development-$(USER)";' > env.pl; \
+	fi;
+
 test:
 	carton exec -- prove -ILib -Ibin/local -r t/
