--- a/app/config/custom_parameters.yml.dist
+++ b/app/config/custom_parameters.yml.dist
@@ -143,7 +143,7 @@ parameters:
             - '成人用品'
             - '鲜花礼品'
 
-    cache_data_path: "%kernel.root_dir%/cache/%kernel.environment%"
+    cache_data_path: "%kernel.root_dir%/cache_data/%kernel.environment%"
     cps_default_rebate: 70  #返利给用户百分比
     cps_rebate_type:
         'point': 1  #XX元
