--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -10,7 +10,7 @@ parameters:
     mailer_host:       smtp.exmail.qq.com
     mailer_user:       account@91jili.com
     mailer_password:   91jili
-    mailer_return_path: account@91jili.com
+    mailer_return_path: bm@bm.91wenwen.com
 
     locale:            zh_CN
     secret:            ThisTokenIsNotSoSecretChangeIt
