--- a/app/config/custom_parameters.yml.dist
+++ b/app/config/custom_parameters.yml.dist
@@ -346,12 +346,12 @@ parameters:
     #jili weibo developer account
     #weibo_appid: 693159936
     #weibo_appkey: ac24832ff6273b123b4f3dc7747cbf1e
-    #weibologin_callback_url: http://www.91jili.com/WeiBoLogin/weibocallback
+    weibologin_callback_url: http://www.91jili.com/WeiBoLogin/weibocallback
 
     #wenwen weibo developer account
     weibo_appid: 3163097902
     weibo_appkey: af3e112c53a2357b201f3ddd6c8e69e7
-    weibologin_callback_url: http://www.91jili.com/WeiBoLogin/weibocallback
+    weibologin_callback_url: http://www.91wenwen.net/WeiBoLogin/weibocallback
 
    #流量包
     flow_url: http://59.83.33.13/   #接口url
