--- a/circle.yml
+++ b/circle.yml
@@ -13,10 +13,10 @@ dependencies:
       install -y mysql-server-5.6
   override:
     - make circle
-    - php app/console doctrine:database:drop --force --env "test"
-    - php app/console doctrine:database:create --env "test"
-    - php app/console doctrine:schema:update --force --env "test"
-    - php app/console cache:clear --env "test"
+#    - php app/console doctrine:database:drop --force --env "test"
+#    - php app/console doctrine:database:create --env "test"
+#    - php app/console doctrine:schema:update --force --env "test"
+#    - php app/console cache:clear --env "test"
 
 test:
   override:
