--- a/circle.yml
+++ b/circle.yml
@@ -13,16 +13,7 @@ dependencies:
       install -y mysql-server-5.6
   override:
     - make circle
-#    - php app/console doctrine:database:drop --force --env "test"
-#    - php app/console doctrine:database:create --env "test"
-#    - php app/console doctrine:schema:update --force --env "test"
-#    - php app/console cache:clear --env "test"
 
 test:
   override:
-    - ./bin/phpunit -c ./app/phpunit.xml.dist -d memory_limit=-1 -v --debug --testsuite wenwen
-    - ./bin/phpunit -c ./app/phpunit.xml.dist -d memory_limit=-1 -v --debug --testsuite jili_api_command
-    - ./bin/phpunit -c ./app/phpunit.xml.dist -d memory_limit=-1 -v --debug --testsuite jili_api_controller
-    - ./bin/phpunit -c ./app/phpunit.xml.dist -d memory_limit=-1 -v --debug --testsuite jili_api_entity
-    - ./bin/phpunit -c ./app/phpunit.xml.dist -d memory_limit=-1 -v --debug --testsuite jili_api_form
-    - ./bin/phpunit -c ./app/phpunit.xml.dist -d memory_limit=-1 -v --debug --testsuite jili_api_repo
+    - ./bin/phpunit -c ./app/phpunit.xml.dist --testsuite all -d memory_limit=-1 --debug --verbose
