--- a/app/config/custom_parameters.yml.dist
+++ b/app/config/custom_parameters.yml.dist
@@ -238,15 +238,15 @@ parameters:
     exchange_ing_alipay_tilte: 支付宝充值兑换申请
     exchange_ing_mobile_tilte: 手机费兑换申请
     exchange_ing_flow_tilte: 流量包兑换申请
-    exchange_ing_amazon_content: 亲爱的用户：<br/><br/>我们已经收到您的“亚马逊礼品卡”兑换申请，兑换会在三个工作日内完成（遇周末及节假日顺延）。<br/>请关注您的<a href="http://%domain%/user/exchange/2/1"  target="_blank">兑换历史</a>，来及时了解兑换状态。如果兑换失败，积分会自动返还到您的91问问帐户。<br/><br/>91问问运营中心
-    exchange_ing_alipay_content: 亲爱的用户：<br/><br/>您好！我们已经收到了您的支付宝充值申请，我们将在十个工作日内完成支付宝充值手续。<br/>请关注您的<a href="http://%domain%/user/exchange/3/1"  target="_blank">兑换历史</a>，来及时了解兑换状态。如果兑换失败，积分会自动返还到您的91问问帐户。<br/><br/>91问问运营中心
-    exchange_ing_mobile_content: 亲爱的用户：<br/><br/>我们已经收到您的手机费兑换申请，兑换会在三个工作日内完成（遇周末及节假日顺延）。<br/>请关注您的<a href="http://%domain%/user/exchange/4/1"  target="_blank">兑换历史</a>，来及时了解兑换状态。如果兑换失败，积分会自动返还到您的91问问帐户。<br/><br/>91问问运营中心
-    exchange_ing_flow_content: 亲爱的用户：<br/><br/>我们已经收到您的流量包兑换申请，兑换会在一个工作日内完成（遇周末及节假日顺延）。<br/>请关注您的<a href="http://%domain%/user/exchange/4/1"  target="_blank">兑换历史</a>，来及时了解兑换状态。如果兑换失败，积分会自动返还到您的91问问帐户。<br/><br/>91问问运营中心
+    exchange_ing_amazon_content: 亲爱的用户：<br/><br/>我们已经收到您的“亚马逊礼品卡”兑换申请，兑换会在三个工作日内完成（遇周末及节假日顺延）。<br/>请关注您的<a href="http://%domain%/user/exchange?type=0&exchangeType=1"  target="_blank">兑换历史</a>，来及时了解兑换状态。如果兑换失败，积分会自动返还到您的91问问帐户。<br/><br/>91问问运营中心
+    exchange_ing_alipay_content: 亲爱的用户：<br/><br/>您好！我们已经收到了您的支付宝充值申请，我们将在十个工作日内完成支付宝充值手续。<br/>请关注您的<a href="http://%domain%/user/exchange?type=0&exchangeType=1"  target="_blank">兑换历史</a>，来及时了解兑换状态。如果兑换失败，积分会自动返还到您的91问问帐户。<br/><br/>91问问运营中心
+    exchange_ing_mobile_content: 亲爱的用户：<br/><br/>我们已经收到您的手机费兑换申请，兑换会在三个工作日内完成（遇周末及节假日顺延）。<br/>请关注您的<a href="http://%domain%/user/exchange?type=0&exchangeType=1"  target="_blank">兑换历史</a>，来及时了解兑换状态。如果兑换失败，积分会自动返还到您的91问问帐户。<br/><br/>91问问运营中心
+    exchange_ing_flow_content: 亲爱的用户：<br/><br/>我们已经收到您的流量包兑换申请，兑换会在一个工作日内完成（遇周末及节假日顺延）。<br/>请关注您的<a href="http://%domain%/user/exchange?type=0&exchangeType=1"  target="_blank">兑换历史</a>，来及时了解兑换状态。如果兑换失败，积分会自动返还到您的91问问帐户。<br/><br/>91问问运营中心
     exchange_finish_amazon_tilte: “亚马逊礼品卡”兑换成功
     exchange_finish_alipay_tilte: 支付宝充值兑换成功
     exchange_finish_mobile_tilte: 手机费兑换成功
     exchange_finish_flow_tilte: 流量包兑换成功
-    exchange_finish_amazon_content: 亲爱的用户：<br/><br/>您好！您的“亚马逊礼品卡”兑换申请已经处理成功，<br/>请在<a href="http://%domain%/user/exchange/2/1"  target="_blank">兑换历史</a>中查看您的“亚马逊礼品卡”卡号。<br/><br/>如有问题，请联系我们的网站客服人员。<br/><a href="http://%domain%/support"  target="_blank">http://%domain%/support</a><br/><br/>91问问运营中心
+    exchange_finish_amazon_content: 亲爱的用户：<br/><br/>您好！您的“亚马逊礼品卡”兑换申请已经处理成功，<br/>请在<a href="http://%domain%/user/exchange?type=0&exchangeType=1"  target="_blank">兑换历史</a>中查看您的“亚马逊礼品卡”卡号。<br/><br/>如有问题，请联系我们的网站客服人员。<br/><a href="http://%domain%/support"  target="_blank">http://%domain%/support</a><br/><br/>91问问运营中心
     exchange_finish_alipay_content: 亲爱的用户：<br/><br/>您好！您的支付宝充值申请已经处理成功，请及时查看您的支付宝余额。<br/><br/>如有问题，请联系我们的网站客服人员。<br/><a href="http://%domain%/support" target="_blank">http://%domain%/support</a><br/><br/>91问问运营中心
     exchange_finish_mobile_content: 亲爱的用户：<br/><br/>您好！您的手机费兑换申请已经处理成功，请及时查看您的手机余额。<br/><br/>如有问题，请联系我们的网站客服人员。<br/><a href="http://%domain%/support" target="_blank">http://%domain%/support</a><br/><br/>91问问运营中心
     exchange_finish_flow_content: 亲爱的用户：<br/><br/>您好！您的流量包兑换申请已经处理成功，请及时查看您的流量。<br/><br/>如有问题，请联系我们的网站客服人员。<br/><a href="http://%domain%/support" target="_blank">http://%domain%/support</a><br/><br/>91问问运营中心
