--- a/app/config/custom_parameters.yml.dist
+++ b/app/config/custom_parameters.yml.dist
@@ -348,7 +348,7 @@ parameters:
     #jili weibo developer account
     #weibo_appid: 693159936
     #weibo_appkey: ac24832ff6273b123b4f3dc7747cbf1e
-    weibologin_callback_url: http://www.91jili.com/WeiBoLogin/weibocallback
+    #weibologin_callback_url: http://www.91jili.com/WeiBoLogin/weibocallback
 
     #wenwen weibo developer account
     weibo_appid: 3163097902
